# ono-lang

./: Cargo.toml  README.md  readme.md  temp.ono  todo.md
common/: Cargo.toml  readme.md
common/src/: error.rs
examples/: expression.ono  function.ono  hello.ono  if.ono  loops.ono  the_dream.ono
ono/: Cargo.toml  temp.ono
ono/src/: main.rs
onoi/: Cargo.toml  readme.md  temp.ono
onoi/src/: environment.rs  error.rs  interpreter.rs  lexer.rs  lib.rs  parser.rs  typechecker.rs
onoi/src/types/: expr.rs  mod.rs  token.rs
src/: ast.rs  environment.rs  error.rs  functions.rs  interpreter.rs  lexer.rs  main.rs  parser.rs  token.rs  typechecker.rs
src/compiler/: scanner.rs
src/types/: expr.rs  mod.rs  stmt.rs  token.rs  value.rs
src/vm/: chunk.rs  mod.rs  op.rs  virtual_machine.rs
syntax/: Cargo.toml  readme.md
syntax/src/: lib.rs
tester/src/: main.rs
tests/: Cargo.toml  readme.md
tests/end-to-end-tests/type-errors/: T001.ono-test
tests/src/: main.rs
