[package]
name = "ono"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-segmentation = "1.7.x"
colored = "2.x.x"
clap = { version = "4.2.2", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1.3.x"
